--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="project">
 					<img src="./assets/soundBear.png" alt="Sound Bear">
 					<h3>SoundBear</h3>
-					<p>Voice-Recognition Music Player and Song/Artist Data Visualizer </p>
+					<p class="description">Voice-Recognition Music Player and Song/Artist Data Visualizer </p>
 				</div>
 				<div class="project">
 					<h3>Parachute</h3>
